@@ -15,6 +15,8 @@ git-annex (6.20160127) UNRELEASED; urgency=medium
     or "lackingcopies", etc.
   * annex.largefiles: Add support for mimetype=text/* etc, when git-annex
     is linked with libmagic.
+  * matchexpression: Added --largefiles option to parse an annex.largefiles
+    expression.
 
  -- Joey Hess <id@joeyh.name>  Thu, 28 Jan 2016 13:53:09 -0400
 
